--- a/server/package.json
+++ b/server/package.json
@@ -7,15 +7,21 @@
     "dev": "nodemon index.ts",
     "build": "tsc",
     "start": "npm run build && node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npm run build && jasmine"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^5.0.0",
+    "@types/jasmine": "^5.1.5",
+    "@types/supertest": "^6.0.2",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "jasmine": "^5.5.0",
+    "jasmine-spec-reporter": "^7.0.0",
     "nodemon": "^3.1.7",
     "pg": "^8.13.1",
+    "supertest": "^7.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
   },
