--- a/server/package.json
+++ b/server/package.json
@@ -14,11 +14,15 @@
   "dependencies": {
     "@types/express": "^5.0.0",
     "@types/jasmine": "^5.1.5",
+    "@types/morgan": "^1.9.9",
     "@types/supertest": "^6.0.2",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "express-rate-limit": "^7.4.1",
+    "helmet": "^8.0.0",
     "jasmine": "^5.5.0",
     "jasmine-spec-reporter": "^7.0.0",
+    "morgan": "^1.10.0",
     "nodemon": "^3.1.7",
     "pg": "^8.13.1",
     "supertest": "^7.0.0",
