--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "@types/express": "^5.0.0",
     "@types/jasmine": "^5.1.5",
     "@types/morgan": "^1.9.9",
+    "@types/pg": "^8.11.10",
     "@types/supertest": "^6.0.2",
     "cors": "^2.8.5",
     "express": "^4.21.1",
