--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon index.ts",
     "build": "tsc",
     "start": "npm run build && node dist/index.js",
-    "test": "npm run build && jasmine"
+    "test": "npm run build && jasmine",
+    "migration:run":"db-migrate up"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +19,8 @@
     "@types/pg": "^8.11.10",
     "@types/supertest": "^6.0.2",
     "cors": "^2.8.5",
+    "db-migrate": "^0.11.14",
+    "db-migrate-pg": "^1.5.2",
     "express": "^4.21.1",
     "express-rate-limit": "^7.4.1",
     "helmet": "^8.0.0",
