--- a/server/package.json
+++ b/server/package.json
@@ -8,16 +8,18 @@
     "build": "tsc",
     "start": "npm run build && node dist/index.js",
     "test": "npm run build && jasmine",
-    "migration:run":"db-migrate up"
+    "migration:run": "db-migrate up"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
     "@types/jasmine": "^5.1.5",
     "@types/morgan": "^1.9.9",
     "@types/pg": "^8.11.10",
     "@types/supertest": "^6.0.2",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "db-migrate": "^0.11.14",
     "db-migrate-pg": "^1.5.2",
