--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
     "@types/jasmine": "^5.1.5",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/morgan": "^1.9.9",
     "@types/pg": "^8.11.10",
     "@types/supertest": "^6.0.2",
@@ -28,6 +29,7 @@
     "helmet": "^8.0.0",
     "jasmine": "^5.5.0",
     "jasmine-spec-reporter": "^7.0.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.7",
     "pg": "^8.13.1",
